[tool.poetry]
name = "python-mux-function-generator"
version = "0.1.0"
description = "A project that demonstrates the functioning of an 8:1 multiplexer as a function generator."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# Add other dependencies here as needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"